Логи базы (#34)
* added sqldblogger

* updated swagger
